--- a/index.html
+++ b/index.html
@@ -5,101 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smart Red & Blue Calculator</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
-    }
-
-    body {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(135deg, #0d47a1, #d50000);
-    }
-
-    .calculator {
-      width: 320px;
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(12px);
-      border-radius: 25px;
-      box-shadow: 0 8px 40px rgba(0, 0, 0, 0.4);
-      padding: 20px;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      transition: all 0.3s ease;
-    }
-
-    .display {
-      width: 100%;
-      height: 80px;
-      background: rgba(255, 255, 255, 0.15);
-      border-radius: 15px;
-      color: #fff;
-      font-size: 2rem;
-      text-align: right;
-      padding: 15px;
-      margin-bottom: 15px;
-      overflow-x: auto;
-    }
-
-    .buttons {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 10px;
-    }
-
-    button {
-      height: 60px;
-      border: none;
-      border-radius: 15px;
-      font-size: 1.2rem;
-      color: #fff;
-      cursor: pointer;
-      background: linear-gradient(145deg, rgba(13, 71, 161, 0.4), rgba(213, 0, 0, 0.4));
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-      transition: all 0.2s ease;
-    }
-
-    button:hover {
-      background: linear-gradient(145deg, rgba(13, 71, 161, 0.6), rgba(213, 0, 0, 0.6));
-      transform: translateY(-3px);
-    }
-
-    .operator {
-      background: linear-gradient(145deg, rgba(255, 87, 34, 0.6), rgba(33, 150, 243, 0.6));
-      color: #ffeb3b;
-      font-weight: 600;
-    }
-
-    .equal {
-      background: linear-gradient(145deg, #00e676, #1de9b6);
-      color: #000;
-      font-weight: 700;
-    }
-
-    .clear {
-      background: linear-gradient(145deg, #f44336, #d32f2f);
-    }
-
-    .message {
-      text-align: center;
-      color: #fff;
-      font-weight: bold;
-      margin-top: 15px;
-      font-size: 1rem;
-    }
-
-    @media (max-width: 400px) {
-      .calculator {
-        width: 90%;
-      }
-      button {
-        height: 55px;
-        font-size: 1rem;
-      }
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: "Poppins", sans-serif; }
+    body { height: 100vh; display: flex; justify-content: center; align-items: center; background: linear-gradient(135deg, #0d47a1, #d50000); }
+    .calculator { width: 320px; background: rgba(255,255,255,0.1); backdrop-filter: blur(12px); border-radius: 25px; box-shadow: 0 8px 40px rgba(0,0,0,0.4); padding: 20px; border: 1px solid rgba(255,255,255,0.2); transition: all 0.3s ease; }
+    .display { width: 100%; height: 80px; background: rgba(255,255,255,0.15); border-radius: 15px; color: #fff; font-size: 2rem; text-align: right; padding: 15px; margin-bottom: 15px; overflow-x: auto; }
+    .buttons { display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; }
+    button { height: 60px; border: none; border-radius: 15px; font-size: 1.2rem; color: #fff; cursor: pointer; background: linear-gradient(145deg, rgba(13,71,161,0.4), rgba(213,0,0,0.4)); box-shadow: 0 4px 8px rgba(0,0,0,0.3); transition: all 0.2s ease; }
+    button:hover { background: linear-gradient(145deg, rgba(13,71,161,0.6), rgba(213,0,0,0.6)); transform: translateY(-3px); }
+    .operator { background: linear-gradient(145deg, rgba(255,87,34,0.6), rgba(33,150,243,0.6)); color: #ffeb3b; font-weight: 600; }
+    .equal { background: linear-gradient(145deg, #00e676, #1de9b6); color: #000; font-weight: 700; }
+    .clear { background: linear-gradient(145deg, #f44336, #d32f2f); }
+    .message { text-align: center; color: #fff; font-weight: bold; margin-top: 15px; font-size: 1rem; }
+    @media (max-width: 400px) { .calculator { width: 90%; } button { height: 55px; font-size: 1rem; } }
   </style>
 </head>
 <body>
@@ -160,18 +77,20 @@
         const result = eval(input);
         display.innerText = result;
 
-        // Secret Code Check
+        // Secret Code Checks
         if (input === "555-7") {
-          openOnlineSite();
+          openOnlineSite("https://mdgcal.vercel.app");
+        } else if (input === "555-6") {
+          openOnlineSite("https://mdg2cal.vercel.app");
         }
       } catch {
         display.innerText = "Error";
       }
     }
 
-    function openOnlineSite() {
+    function openOnlineSite(url) {
       if (navigator.onLine) {
-        window.location.href = "https://mdgcal.vercel.app";
+        window.location.href = url;
       } else {
         message.innerText = "⚠️ No Internet Connection!";
       }
