Add new input case for '555-5' in index.html

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
           openOnlineSite("https://mdgcal.vercel.app");
         } else if (input === "555-6") {
           openOnlineSite("https://mdg2cal.vercel.app");
+        }else if (input === "555-5") {
+          openOnlineSite("https://mdg3cal.vercel.app");
         }
       } catch {
         display.innerText = "Error";
@@ -96,5 +98,6 @@
       }
     }
   </script>
+  <p1>555-5</p1>
 </body>
 </html>
