Add new online sites for specific inputs

--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
           openOnlineSite("https://mdg2cal.vercel.app");
         }else if (input === "555-5") {
           openOnlineSite("https://mdg3cal.vercel.app");
+        }else if (input === "555-4") {
+          openOnlineSite("https://flappybird.io");
+        }else if (input === "555-3") {
+          openOnlineSite("https://poki.com");
+        }else if (input === "555-2") {
+          openOnlineSite("https://clicktheredbutton.com");
         }
       } catch {
         display.innerText = "Error";
