Revamp calculator UI and improve styles
Refactor calculator layout and styles for better responsiveness and usability.

--- a/index.html
+++ b/index.html
@@ -1,211 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Smart Red & Blue Calculator</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: "Poppins", sans-serif; }
-    body {
-      height: 100vh; display: flex; justify-content: center; align-items: center;
-      background: linear-gradient(135deg, #0d47a1, #d50000); overflow: hidden;
-    }
-    .calculator {
-      width: 320px; background: rgba(255,255,255,0.1); backdrop-filter: blur(12px);
-      border-radius: 25px; box-shadow: 0 8px 40px rgba(0,0,0,0.4); padding: 20px;
-      border: 1px solid rgba(255,255,255,0.2); transition: all 0.3s ease;
-    }
-    .display {
-      width: 100%; height: 80px; background: rgba(255,255,255,0.15); border-radius: 15px;
-      color: #fff; font-size: 2rem; text-align: right; padding: 15px; margin-bottom: 15px; overflow-x: auto;
-    }
-    .buttons { display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; }
-    button {
-      height: 60px; border: none; border-radius: 15px; font-size: 1.2rem;
-      color: #fff; cursor: pointer;
-      background: linear-gradient(145deg, rgba(13,71,161,0.4), rgba(213,0,0,0.4));
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3); transition: all 0.2s ease;
-    }
-    button:hover {
-      background: linear-gradient(145deg, rgba(13,71,161,0.6), rgba(213,0,0,0.6));
-      transform: translateY(-3px);
-    }
-    .operator { background: linear-gradient(145deg, rgba(255,87,34,0.6), rgba(33,150,243,0.6)); color: #ffeb3b; font-weight: 600; }
-    .equal { background: linear-gradient(145deg, #00e676, #1de9b6); color: #000; font-weight: 700; }
-    .clear { background: linear-gradient(145deg, #f44336, #d32f2f); }
-    .message { text-align: center; color: #fff; font-weight: bold; margin-top: 15px; font-size: 1rem; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Calculator</title>
+<style>
+* { margin:0; padding:0; box-sizing:border-box; font-family:"Poppins", sans-serif; }
+html, body { width:100%; height:100%; background:#fff; display:flex; justify-content:center; align-items:center; }
 
-    @media (max-width: 400px) {
-      .calculator { width: 90%; }
-      button { height: 55px; font-size: 1rem; }
-    }
+.calculator {
+  width:100%; max-width:420px; height:100%; max-height:720px;
+  display:flex; flex-direction:column; justify-content:flex-end; background:#fff;
+}
 
-    iframe { width: 100%; height: 100vh; border: none; }
+.status { height:30px; text-align:center; line-height:30px; color:#fff; background:#f44336; font-weight:bold; display:none; }
 
-    /* Loader */
-    .loader {
-      position: fixed; top: 0; left: 0; width: 100%; height: 100vh; background: #000;
-      display: flex; align-items: center; justify-content: center; flex-direction: column;
-      z-index: 999; color: white;
-    }
-    .spinner {
-      border: 6px solid rgba(255,255,255,0.2); border-top: 6px solid #fff; border-radius: 50%;
-      width: 60px; height: 60px; animation: spin 1s linear infinite; margin-bottom: 15px;
-    }
-    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-    .loader-text { font-size: 1.2rem; letter-spacing: 1px; animation: fade 1.5s infinite alternate; }
-    @keyframes fade { from { opacity: 0.6; } to { opacity: 1; } }
+.display {
+  height:20%; min-height:80px; width:100%;
+  background:#f0f0f0; color:#2e7d32; font-size:3rem; font-weight:bold;
+  text-align:right; padding:20px; display:flex; align-items:flex-end; justify-content:flex-end;
+  border-bottom:1px solid #ddd; overflow-x:auto;
+}
 
-    /* Secret code list */
-    .code-list {
-      color: white;
-      padding: 20px;
-      text-align: center;
-      background: black;
-      height: 100vh;
-      overflow-y: auto;
-    }
-    .code-list h2 {
-      color: #00e676;
-      margin-bottom: 15px;
-    }
-    .code-list p {
-      font-size: 1rem;
-      line-height: 1.6;
-      border-bottom: 1px solid rgba(255,255,255,0.1);
-      padding: 5px 0;
-    }
-  </style>
+.buttons {
+  display:grid; grid-template-columns:repeat(4,1fr); grid-template-rows:repeat(5,1fr);
+  flex:1 1 auto; gap:8px; padding:10px;
+}
+
+button {
+  border:1px solid #ddd; border-radius:12px; font-size:2rem; font-weight:500;
+  cursor:pointer; background:#fff; display:flex; justify-content:center; align-items:center;
+  user-select:none; transition: background 0.2s, transform 0.1s;
+}
+button:active { transform:scale(0.95); }
+button:hover { background:#f0f0f0; }
+button.number { color:#2e7d32; }
+button.operator { color:#388e3c; }
+button.equal { color:#fff; background:#2e7d32; }
+button.equal:hover { background:#1b5e20; }
+button.clear { color:#fff; background:#f44336; }
+button.clear:hover { background:#d32f2f; }
+
+/* Webview */
+#webview { position:fixed; top:0; left:0; width:100%; height:100%; background:#fff; display:none; flex-direction:column; z-index:9999; }
+#topBar { height:60px; background:#2e7d32; color:white; display:flex; align-items:center; padding:0 15px; font-size:22px; flex-shrink:0; }
+#backBtn { background:none; border:none; color:white; font-size:26px; margin-right:12px; cursor:pointer; }
+#iframeBox { width:100%; height:calc(100% - 60px); border:none; display:none; flex:1; }
+#loader { display:flex; justify-content:center; align-items:center; height:100%; flex:1; }
+.dot { width:12px; height:12px; margin:0 5px; background:#2e7d32; border-radius:50%; animation:jump 0.6s infinite alternate; }
+.dot:nth-child(2) { animation-delay:0.2s; }
+.dot:nth-child(3) { animation-delay:0.4s; }
+@keyframes jump { 0% { transform:translateY(0); } 100% { transform:translateY(-15px); } }
+
+/* Secret menu */
+#secretMenu { position:fixed; top:0; left:0; width:100%; height:100%; background:#fff; display:none; padding:20px; overflow-y:auto; z-index:9999; }
+.s-item { padding:15px; background:#f0f0f0; border-radius:10px; margin-bottom:12px; font-size:1.2rem; cursor:pointer; }
+h2 { color:#2e7d32; margin-bottom:20px; }
+
+/* Responsive */
+@media(max-width:500px){ .display{ font-size:2rem; padding:15px; } button{ font-size:1.5rem; min-height:50px; } }
+@media(max-height:650px){ .display{ font-size:1.8rem; padding:10px; } button{ font-size:1.3rem; min-height:45px; } }
+</style>
 </head>
 <body>
-  <div class="calculator" id="calculator">
-    <div class="display" id="display">0</div>
-    <div class="buttons">
-      <button class="clear" onclick="clearDisplay()">C</button>
-      <button onclick="deleteChar()">⌫</button>
-      <button class="operator" onclick="append('%')">%</button>
-      <button class="operator" onclick="append('/')">÷</button>
 
-      <button onclick="append('7')">7</button>
-      <button onclick="append('8')">8</button>
-      <button onclick="append('9')">9</button>
-      <button class="operator" onclick="append('*')">×</button>
+<div class="calculator" id="calculator">
+  <div class="status" id="status"></div>
+  <div class="display" id="display">0</div>
+  <div class="buttons">
+    <button class="clear" onclick="clearDisplay()">C</button>
+    <button class="operator" onclick="deleteChar()">⌫</button>
+    <button class="operator" onclick="append('%')">%</button>
+    <button class="operator" onclick="append('÷')">÷</button>
 
-      <button onclick="append('4')">4</button>
-      <button onclick="append('5')">5</button>
-      <button onclick="append('6')">6</button>
-      <button class="operator" onclick="append('-')">−</button>
+    <button class="number" onclick="append('7')">7</button>
+    <button class="number" onclick="append('8')">8</button>
+    <button class="number" onclick="append('9')">9</button>
+    <button class="operator" onclick="append('×')">×</button>
 
-      <button onclick="append('1')">1</button>
-      <button onclick="append('2')">2</button>
-      <button onclick="append('3')">3</button>
-      <button class="operator" onclick="append('+')">+</button>
+    <button class="number" onclick="append('4')">4</button>
+    <button class="number" onclick="append('5')">5</button>
+    <button class="number" onclick="append('6')">6</button>
+    <button class="operator" onclick="append('-')">−</button>
 
-      <button onclick="append('0')">0</button>
-      <button onclick="append('.')">.</button>
-      <button class="equal" onclick="calculate()">=</button>
-    </div>
-    <div id="message" class="message"></div>
+    <button class="number" onclick="append('1')">1</button>
+    <button class="number" onclick="append('2')">2</button>
+    <button class="number" onclick="append('3')">3</button>
+    <button class="operator" onclick="append('+')">+</button>
+
+    <button class="number" onclick="append('0')">0</button>
+    <button class="number" onclick="append('00')">00</button>
+    <button class="number" onclick="append('.')">.</button>
+    <button class="equal" onclick="calculate()">=</button>
   </div>
+</div>
 
-  <script>
-    const display = document.getElementById("display");
-    const message = document.getElementById("message");
-    let siteOpen = false;
+<!-- Webview -->
+<div id="webview">
+  <div id="topBar">
+    <button id="backBtn" onclick="closeWebview()">←</button> Web
+  </div>
+  <div id="loader">
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+  </div>
+  <iframe id="iframeBox"></iframe>
+</div>
 
-    function append(value) {
-      if (display.innerText === "0") display.innerText = value;
-      else display.innerText += value;
-    }
-    function clearDisplay() { display.innerText = "0"; message.innerText = ""; }
-    function deleteChar() { display.innerText = display.innerText.slice(0, -1) || "0"; }
+<!-- Secret Menu -->
+<div id="secretMenu">
+  <h2>Secret Menu</h2>
+  <div class="s-item" onclick="openWebsite('https://mdgcal.vercel.app/')">MDG Cal</div>
+  <div class="s-item" onclick="openWebsite('https://mdg2cal.vercel.app/')">MDG2 Cal</div>
+  <div class="s-item" onclick="openWebsite('https://mdg3cal.vercel.app/')">MDG3 Cal</div>
+  <div class="s-item" onclick="openWebsite('https://chat.openai.com')">ChatGPT</div>
+  <div class="s-item" onclick="openWebsite('https://gemini.google.com')">Gemini AI</div>
+  <div class="s-item" onclick="openWebsite('https://proxis.vercel.app')">Proxis AI</div>
+  <div class="s-item" onclick="openWebsite('https://copilot.microsoft.com')">Copilot AI</div>
+  <div class="s-item" onclick="openWebsite('https://www.perplexity.ai')">Perplexity AI</div>
+  <div class="s-item" onclick="closeSecret()">Close Menu</div>
+</div>
 
-    function calculate() {
-      try {
-        const input = display.innerText.trim();
-        const mathExpr = input.replace("÷", "/").replace("×", "*");
-        const result = eval(mathExpr);
-        display.innerText = result;
+<script>
+const display = document.getElementById("display");
+const status = document.getElementById("status");
+let input = "";
 
-        // Secret Codes
-        if (input === "555-0") showCodeList();
-        else if (input === "555-7") openOnlineSite("https://mdgcal.vercel.app");
-        else if (input === "555-6") openOnlineSite("https://mdg2cal.vercel.app");
-        else if (input === "555-5") openOnlineSite("https://mdg3cal.vercel.app");
-        else if (input === "555-4") openOnlineSite("https://flappybird.io");
-        else if (input === "555-3") openOnlineSite("https://poki.com");
-        else if (input === "555-2") openOnlineSite("https://clicktheredbutton.com");
-        else if (input === "555-1") openOnlineSite("https://pranx.com");
-        else if (input === "777-1") openOnlineSite("https://chat.openai.com");
-        else if (input === "777-2") openOnlineSite("https://gemini.google.com");
-        else if (input === "777-3") openOnlineSite("https://bing.com/chat");
-        else if (input === "777-4") openOnlineSite("https://poe.com");
-        else if (input === "888-1") openOnlineSite("https://krunker.io");
-        else if (input === "888-2") openOnlineSite("https://slowroads.io");
-        else if (input === "888-3") openOnlineSite("https://littlealchemy2.com");
-        else if (input === "888-4") openOnlineSite("https://paper-io.com");
-        else if (input === "888-5") openOnlineSite("https://smashkarts.io");
-        else if (input === "888-6") openOnlineSite("https://shellshock.io");
-        else if (input === "888-7") openOnlineSite("https://mariohtml5.com");
-        else if (input === "888-8") openOnlineSite("https://minesweeperonline.com");
-        else if (input.includes(".")) {
-          let url = input.startsWith("http") ? input : "https://" + input;
-          openOnlineSite(url);
-        }
+function showStatus(msg){ status.innerText = msg; status.style.display = "block"; setTimeout(()=>{ status.style.display="none"; },3000); }
 
-      } catch {
-        display.innerText = "Error";
-      }
-    }
+function append(val){ input = (input==="0")? val : input+val; display.innerText = input; }
+function clearDisplay(){ input="0"; display.innerText="0"; }
+function deleteChar(){ input = input.slice(0,-1)||"0"; display.innerText = input; }
 
-    function showCodeList() {
-      siteOpen = true;
-      history.pushState({ page: "list" }, "", "#list");
-      document.body.innerHTML = `
-        <div class="code-list">
-          <h2>🔐 Secret Code List</h2>
-          <p><b>555-7</b> → MDG Cal</p>
-          <p><b>555-6</b> → MDG2 Cal</p>
-          <p><b>555-5</b> → MDG3 Cal</p>
-          <p><b>555-4</b> → Flappy Bird</p>
-          <p><b>555-3</b> → Poki Games</p>
-          <p><b>555-2</b> → Click The Red Button</p>
-          <p><b>555-1</b> → Pranx (Fun Site)</p>
-          <p><b>777-1</b> → ChatGPT</p>
-          <p><b>777-2</b> → Gemini AI</p>
-          <p><b>777-3</b> → Bing Copilot</p>
-          <p><b>777-4</b> → Poe AI</p>
-          <p><b>888-1</b> → Krunker.io</p>
-          <p><b>888-2</b> → Slowroads.io</p>
-          <p><b>888-3</b> → Little Alchemy 2</p>
-          <p><b>888-4</b> → Paper.io</p>
-          <p><b>888-5</b> → Smash Karts</p>
-          <p><b>888-6</b> → Shell Shockers</p>
-          <p><b>888-7</b> → Mario HTML5</p>
-          <p><b>888-8</b> → Minesweeper</p>
-          <p style="color:#00e676;margin-top:10px;">Press your phone’s back button to return.</p>
-        </div>`;
-    }
+function calculate(){
+  const codes = {
+    "555-0":"secret","555-7":"https://mdgcal.vercel.app/","555-6":"https://mdg2cal.vercel.app/","555-5":"https://mdg3cal.vercel.app/",
+    "777-1":"https://chat.openai.com","777-2":"https://gemini.google.com","777-3":"https://proxis.vercel.app","777-4":"https://copilot.microsoft.com",
+    "777-5":"https://www.perplexity.ai"
+  };
+  if(codes[input]){
+    if(codes[input]==="secret"){ document.getElementById("secretMenu").style.display="block"; input="0"; display.innerText="0"; return; }
+    openWebsite(codes[input]); input="0"; display.innerText="0"; return;
+  }
+  try{ display.innerText = eval(input.replace("×","×").replace("÷","÷")); input=display.innerText; } 
+  catch{ display.innerText="Error"; showStatus("Error"); input="0"; }
+}
 
-    function openOnlineSite(url) {
-      if (navigator.onLine) {
-        siteOpen = true;
-        history.pushState({ page: "site" }, "", "#site");
-        document.body.innerHTML = `
-          <div class="loader" id="loader">
-            <div class="spinner"></div>
-            <div class="loader-text">Loading...</div>
-          </div>
-          <iframe src="${url}" id="webframe"></iframe>
-        `;
-        const iframe = document.getElementById("webframe");
-        iframe.onload = () => { document.getElementById("loader").style.display = "none"; };
-      } else message.innerText = "⚠️ No Internet Connection!";
-    }
+// Webview
+const webview = document.getElementById("webview");
+const loader = document.getElementById("loader");
+const iframeBox = document.getElementById("iframeBox");
 
-    window.onpopstate = function () {
-      if (siteOpen) { siteOpen = false; location.reload(); }
-    };
-  </script>
+function openWebsite(url){
+  if(!navigator.onLine){ showStatus("kutay Internet to dekh lay"); display.innerText="0"; return; }
+  webview.style.display="flex"; loader.style.display="flex"; iframeBox.style.display="none";
+  iframeBox.src = url;
+  iframeBox.onload = ()=>{ loader.style.display="none"; iframeBox.style.display="block"; };
+  iframeBox.onerror = ()=>{ loader.style.display="none"; showStatus("Error loading site"); };
+}
+
+function closeWebview(){ iframeBox.src=""; webview.style.display="none"; }
+function closeSecret(){ document.getElementById("secretMenu").style.display="none"; }
+</script>
+
 </body>
-</html>
+  </html>
